[package]
name = "deneb"
version = "0.1.0"
authors = ["Radu Popescu <mail@radupopescu.net>"]

[features]
default = ["fuse_module"]
fuse_module = ["deneb-fuse"]

[[bin]]
name = "deneb"
path = "src/main.rs"
doc = false
required-features = ["fuse_module"]

[dependencies]
deneb-core = { path = "deneb-core" }
deneb-fuse = { path = "deneb-fuse", optional = true }

failure = "^0.1.0"
log = "^0.4.0"
log4rs = "^0.8.0"
nix = "^0.10.0"
structopt = "^0.2.0"
structopt-derive = "^0.2.0"

[workspace]
